docs: Article section 이미지 수정

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
           </div>
         </div>
         <div class="article-item">
-          <img src="./images/생명의 시작.jpg" alt="Am Anfang" />
+          <img src="./images/KÖNIG SEOUL.jpg" alt="Am Anfang" />
           <div class="contents-box">
             <h6>Ro Eunnim, Artist of Life, Sings about Nature</h6>
             <div class="authorship">[ARTICLE] Gana Art</div>
