improve: Article section 수정

--- a/index.html
+++ b/index.html
@@ -209,36 +209,52 @@
       <h1>Article</h1>
       <div class="article-area">
         <div class="article-item">
-          <img src="./images/김명진.jpg" alt="김명진" />
+          <a href="javascript:void(0)">
+            <img src="./images/MyoungJinKim.jpg" alt="김명진" />
+          </a>
           <div class="contents-box">
-            <h6>
-              Edgewalker by Myoung-Jin Kim: Depictive Narration or Theatrical
-              Description
-            </h6>
+            <a href="javascript:void(0)">
+              <h6>
+                Edgewalker by Myoung-Jin Kim: Depictive Narration or Theatrical
+                Description
+              </h6>
+            </a>
             <div class="authorship">[ARTICLES] Galerie GAIA</div>
           </div>
         </div>
         <div class="article-item">
-          <img src="./images/KÖNIG SEOUL.jpg" alt="KÖNIG SEOUL rooftop" />
+          <a href="javascript:void(0)">
+            <img src="./images/KONIG-SEOUL.jpg" alt="KÖNIG SEOUL rooftop" />
+          </a>
           <div class="contents-box">
-            <h6>Why the Art World Is Pivoting Towards South Korea</h6>
+            <a href="javascript:void(0)">
+              <h6>Why the Art World Is Pivoting Towards South Korea</h6>
+            </a>
             <div class="authorship">[CULTURAL ISSUE] OCULA</div>
           </div>
         </div>
         <div class="article-item">
-          <img src="./images/KÖNIG SEOUL.jpg" alt="Am Anfang" />
+          <a href="javascript:void(0)">
+            <img src="./images/Am-Anfang.jpg" alt="Am Anfang" />
+          </a>
           <div class="contents-box">
-            <h6>Ro Eunnim, Artist of Life, Sings about Nature</h6>
+            <a href="javascript:void(0)">
+              <h6>Ro Eunnim, Artist of Life, Sings about Nature</h6>
+            </a>
             <div class="authorship">[ARTICLE] Gana Art</div>
           </div>
         </div>
         <div class="article-item">
-          <img src="./images/Your Sound is My Sound.jpg" alt="Your Sound is My Sound" />
+          <a href="javascript:void(0)">
+            <img src="./images/Your Sound is My Sound.jpg" alt="Your Sound is My Sound" />
+          </a>
           <div class="contents-box">
-            <h6>
-              Unstoppable footsteps: Spring Revolution and the condition of
-              Myanmar art scene in 2021
-            </h6>
+            <a href="javascript:void(0)">
+              <h6>
+                Unstoppable footsteps: Spring Revolution and the condition of
+                Myanmar art scene in 2021
+              </h6>
+            </a>
             <div class="authorship">[CULTURAL ISSUE] MONTHLY ART</div>
           </div>
         </div>
