feat: Slide, Article section 반응형 웹 구현

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
       <div class="swiper-wrapper">
         <div class="swiper-slide">
           <img src="./images/Homeslide_PC_5.jpg" alt="Homeslide" class="silde__image" />
+          <img src="./images/Homeslide_Mobile_5.jpg" alt="Homeslide" class="silde__image_m" />
           <div class="text-box">
             <h2>Kiaf SEOUL & Kiaf PLUS</h2>
             <p>
@@ -120,6 +121,7 @@
         </div>
         <div class="swiper-slide">
           <img src="./images/Homeslide_PC_4.jpg" alt="Homeslide" class="silde__image" />
+          <img src="./images/Homeslide_Mobile_4.jpg" alt="Homeslide" class="silde__image_m">
           <div class="text-box">
             <h2>Explore insights programs</h2>
             <p>Explore various insights programs organized by Kiaf.</p>
